--- a/faceunity/src/main/res/values-zh-rCN/strings.xml
+++ b/faceunity/src/main/res/values-zh-rCN/strings.xml
@@ -26,7 +26,7 @@
     <string name="live_photo_save_succeed">道具保存成功</string>
 
     <string name="recover">恢复</string>
-    <string name="beauty_box_heavy_blur_fine">精细磨皮</string>
+    <string name="beauty_box_heavy_blur_fine">磨皮</string>
     <string name="beauty_box_delspot">祛斑痘</string>
     <string name="beauty_box_color_level">美白</string>
     <string name="beauty_box_red_level">红润</string>
